--- a/res/layout/fragment_call.xml
+++ b/res/layout/fragment_call.xml
@@ -1,15 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" 
-    android:id="@+id/call_list_layout">
+    android:layout_height="match_parent"
+    android:id="@+id/call_list_layout"
+    android:gravity="center">
     
     <ListView 
         android:id="@+id/call_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-  
-    <ImageButton
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
+    
+    <TextView
+        android:id="@+id/calllist_no_text"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"   
+        android:layout_centerHorizontal="true"
+        android:text="@string/call_list_no_item"
+        android:textColor="@color/text_color"
+        android:textSize="20sp" 
+        android:visibility="visible"/>
+    
+   <ImageButton
         android:id="@+id/call_fab"
         android:layout_width="@dimen/fab_button_diameter"
         android:layout_height="@dimen/fab_button_diameter"
@@ -21,6 +34,5 @@
         android:background="@drawable/fab_shape"
         android:src="@drawable/fab_ic_add"
         android:tint="@android:color/white"/>
- 
 
 </RelativeLayout>
