--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="colorPrimary">#6ea51d</color>
-    <color name="colorPrimaryDark">#59911e</color>
+    <color name="colorPrimary">#F9A825</color>
+    <color name="colorPrimaryDark">#F57F17</color>
     <color name="textColorPrimary">#606ea51d</color>
-    <color name="windowBackground">#262626</color>
+    <color name="windowBackground">#ffffff</color>
     <color name="navigationBarColor">#000000</color>
     <color name="colorAccent">#ffffff</color>
     <color name="text_bottom_color">#FF5722</color>
-    <color name="background_fragment">#454545</color>
+    <color name="background_fragment">#ffffff</color>
     
     <color name="white">#ffffff</color>
     <color name="bg_gray">#90e2e2e2</color>
+    <color name="text_color">#616161</color>
 
 </resources>
