--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <style name="MyMaterialTheme" parent="MyMaterialTheme.Base"></style>
 
@@ -13,6 +13,26 @@
         <item name="android:windowBackground">@color/windowBackground</item>
         <item name="android:actionBarDivider">@color/colorPrimary</item>    
         <item name="android:windowContentOverlay">@color/colorPrimary</item>
+    </style>
+    
+    <style name="DialogTitle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:paddingLeft">17dp</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@color/colorPrimary</item>
+    </style>
+    
+    <style name="DialogItem">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:paddingLeft">17dp</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/text_color</item>
+        <item name="android:background">@color/white</item>
     </style>
 
 </resources>
