--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -13,5 +13,6 @@
     <color name="white">#ffffff</color>
     <color name="bg_gray">#90e2e2e2</color>
     <color name="text_color">#616161</color>
+    <color name="text_hint">#bdbdbd</color>
 
 </resources>
