--- a/res/drawable/fab_shape.xml
+++ b/res/drawable/fab_shape.xml
@@ -110,7 +110,7 @@
             <!-- Blue button pressed -->
             <item>
                 <shape android:shape="oval">
-                    <solid android:color="@color/colorPrimary"/>
+                    <solid android:color="@color/colorPrimaryDark"/>
                 </shape>
             </item>
         </layer-list>
@@ -227,7 +227,7 @@
             <!-- Blue button -->
             <item>
                 <shape android:shape="oval">
-                    <solid android:color="#03A9F4"/>
+                    <solid android:color="@color/colorPrimary"/>
                 </shape>
             </item>
         </layer-list>
