--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -36,6 +36,16 @@
     </style>
     
    
-        
-
+    <style name="InputItem">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingLeft">15dp</item>
+        <item name="android:layout_marginLeft">15dp</item>
+        <item name="android:gravity">bottom</item>
+        <item name="android:hint">00</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:inputType">number</item>
+        <item name="android:maxLength">2</item>
+    
+    </style>
 </resources>
