--- a/res/layout/contacts_list_layout.xml
+++ b/res/layout/contacts_list_layout.xml
@@ -50,7 +50,7 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/contacts_activity_actionbar"
         android:background="@color/background_fragment"
-        android:choiceMode="singleChoice"
+		android:choiceMode="multipleChoice"
         android:divider="@null"
         android:drawSelectorOnTop="false"
         android:listSelector="@drawable/list_selector"/>
