--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -48,4 +48,11 @@
         <item name="android:maxLength">2</item>
     
     </style>
+    
+    <style name="CustomViewDivider">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:layout_marginLeft">60dp</item>
+        <item name="android:background">#757575</item>
+    </style>
 </resources>
